Fix z-index

--- a/packages/ui/src/components/Box/Box.sass
+++ b/packages/ui/src/components/Box/Box.sass
@@ -65,7 +65,6 @@
 		color: var(--cui-control-color)
 		background-image: var(--cui-box-background-focused-overlay)
 		transition: box-shadow .15s
-		z-index: 2
 	&.is-active,
 	&:focus-within
 		#{$root}-content
