--- a/packages/ui/src/components/Layout/LayoutPage.sass
+++ b/packages/ui/src/components/Layout/LayoutPage.sass
@@ -65,6 +65,7 @@
 			position: sticky
 			right: 0
 			top: var(--cui-content-offset-top, 0)
+			z-index: 2
 			&-content
 				padding-left: var(--cui-layout-section-padding-left)
 			.view-aside-divider > &
