--- a/packages/ui/src/styles/components/editorBlockBoundary.sass
+++ b/packages/ui/src/styles/components/editorBlockBoundary.sass
@@ -15,7 +15,6 @@
 	margin: 0 auto 0 calc(-1 * var(--cui-editor-canvas-element-handle-width, 0))
 	padding-left: var(--cui-editor-canvas-element-handle-width, 0)
 	position: relative
-	z-index: 1
 
 	&::after, &::before
 		border-radius: 2px
@@ -36,9 +35,7 @@
 		margin-top: calc(-1 * var(--cui-editor-block-boundary-height))
 		& + *
 			position: relative
-			z-index: 0
-			&.is-selected
-				z-index: 2
+			z-index: 1
 		& + *:not(.#{$cui-conf-globalPrefix}editorTable)
 			display: flex
 			flex-direction: column
